# jv

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
docs/: email-draft-astral.md  project-proposal.md
results/: micro-server-own_20260519_152335.txt
scripts/: benchmark.sh
src/: cli.rs  error.rs  lib.rs  main.rs  models.rs
src/cache/: manager.rs  mod.rs
src/download/: mod.rs  parallel.rs
src/lockfile/: generator.rs  mod.rs
src/parser/: gradle.rs  mod.rs  pom.rs
src/repository/: client.rs  mod.rs
src/resolver/: effective.rs  mod.rs  provider.rs  pubgrub.rs  pubgrub_impl.rs  simple.rs  transitive.rs
tests/: resolver_snapshots.rs
tests/snapshots/: resolver_snapshots__simple_two_deps.snap
